--- a/qtc_packaging/debian_harmattan/README
+++ b/qtc_packaging/debian_harmattan/README
@@ -1,6 +1,6 @@
 The Debian Package meegopas
 ----------------------------
 
-Comments regarding the Package
+No comments regarding the Package
 
- -- jukka <jukka@unknown>  Mon, 29 Aug 2011 19:40:21 +0300
+ -- Jukka Nousiainen <nousiaisenjukka@gmail.com>  Mon, 29 Aug 2011 19:40:21 +0300
