--- a/qtc_packaging/debian_harmattan/README
+++ b/qtc_packaging/debian_harmattan/README
@@ -1,6 +1,6 @@
 The Debian Package meegopas
 ----------------------------
 
-No comments regarding the Package
+Comments regarding the Package
 
- -- Jukka Nousiainen <nousiaisenjukka@gmail.com>  Mon, 29 Aug 2011 19:40:21 +0300
+ -- jukka <jukka@unknown>  Sat, 01 Oct 2011 15:21:34 +0300
