- map drawing somewhat working - added offset of -1 to datepicker, month was always one unit too large - don't know why

--- a/qtc_packaging/debian_harmattan/README
+++ b/qtc_packaging/debian_harmattan/README
@@ -3,4 +3,4 @@ The Debian Package meegopas
 
 Comments regarding the Package
 
- -- jukka <jukka@unknown>  Sat, 01 Oct 2011 15:21:34 +0300
+ -- Jukka Nousiainen <nousiaisenjukka@gmail.com>  Sat, 01 Oct 2011 15:21:34 +0300
