first release version to Ovi store  - modified aegis manifest  - added spinner for location entry  - modified spinner in other places to stop when http response received

--- a/qtc_packaging/debian_harmattan/changelog
+++ b/qtc_packaging/debian_harmattan/changelog
@@ -1,5 +1,5 @@
-meegopas (0.4.0) unstable; urgency=low
+meegopas (0.0.4) unstable; urgency=low
 
   * Initial Release.
 
- -- jukka <jukka@unknown>  Sat, 01 Oct 2011 15:21:34 +0300
+ -- Jukka Nousiainen <nousiaisenjukka@gmail.com>  Sat, 01 Oct 2011 15:21:34 +0300
