--- a/qtc_packaging/debian_harmattan/changelog
+++ b/qtc_packaging/debian_harmattan/changelog
@@ -1,3 +1,8 @@
+meegopas (0.0.7) unstable; urgency=low
+  * <Add change description here>
+
+ -- Jukka Nousiainen <nousiaisenjukka@gmail.com>  ke, 12 lokakuuta 2011 22:08:33 +0300
+
 meegopas (0.0.6) unstable; urgency=low
   * Added translation to finnish
   * Settings for route optimization and walking speed, more to come
