--- a/qtc_packaging/debian_harmattan/changelog
+++ b/qtc_packaging/debian_harmattan/changelog
@@ -1,3 +1,8 @@
+meegopas (0.0.8) unstable; urgency=low
+  * Added favorites
+
+ -- Jukka Nousiainen <nousiaisenjukka@gmail.com>  to, 20 lokakuuta 2011 21:28:19 +0300
+
 meegopas (0.0.7) unstable; urgency=low
   * <Add change description here>
 
