--- a/qtc_packaging/debian_harmattan/changelog
+++ b/qtc_packaging/debian_harmattan/changelog
@@ -1,3 +1,8 @@
+meegopas (0.1.0) unstable; urgency=low
+  * Added notification for failed positioning
+
+ -- Jukka Nousiainen <nousiaisenjukka@gmail.com>  ma, 31 lokakuuta 2011 17:25:32 +0200
+
 meegopas (0.0.9) unstable; urgency=low
   * Fade in animations for items
   * Time difference between stops
