--- a/qtc_packaging/debian_harmattan/changelog
+++ b/qtc_packaging/debian_harmattan/changelog
@@ -1,3 +1,10 @@
+meegopas (0.1.3) unstable; urgency=low
+  * Map improved
+  * Layout changes to route view page
+  * Many internal improvements
+
+ -- Jukka Nousiainen <nousiaisenjukka@gmail.com>  Thu, 23 Feb 2012 07:00:26 +0200
+
 meegopas (0.1.2) unstable; urgency=low
   * Corrected problem in Traffic exception page
   * Fixed "No result" text in some of the pages
