--- a/qtc_packaging/debian_harmattan/changelog
+++ b/qtc_packaging/debian_harmattan/changelog
@@ -1,3 +1,8 @@
+meegopas (1.3.0) unstable; urgency=low
+  * Added cycling routes
+
+ -- Jukka Nousiainen <nousiaisenjukka@gmail.com>  Mon, 07 May 2012 02:29:21 +0300
+
 meegopas (1.2.0) unstable; urgency=low
   * Button for searching 15 min earlier and later routes
   * Support for adding destination shortcuts to application menu
