--- a/qtc_packaging/debian_harmattan/changelog
+++ b/qtc_packaging/debian_harmattan/changelog
@@ -1,5 +1,5 @@
 meegopas (1.4.0) unstable; urgency=low
-  * <Add change description here>
+  * Cycling improvements
 
  -- Jukka Nousiainen <nousiaisenjukka@gmail.com>  Sat, 02 Jun 2012 18:44:49 +0300
 
