--- a/qtc_packaging/debian_harmattan/changelog
+++ b/qtc_packaging/debian_harmattan/changelog
@@ -1,3 +1,8 @@
+meegopas (1.5.1) unstable; urgency=low
+  * Internal improvements
+
+ -- Jukka Nousiainen <nousiaisenjukka@gmail.com>  Thu, 20 Dec 2012 22:02:40 +0200
+
 meegopas (1.5.0) unstable; urgency=low
   * Support for Tampere
 
